istio/destination-rules.yaml
# UI service
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: chuck-ui
spec:
  host: chuck-ui
  subsets:
  - name: v1
    labels:
      serving: "true"
      version: "1.0"
  - name: v2
    labels:
      serving: "true"
      version: "2.0"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: chuck-joke-service
spec:
  host: chuck-joke-service
  subsets:
  - name: v1
    labels:
      serving: "true"
      version: "1.0"
  - name: v2
    labels:
      serving: "true"
      version: "2.0"
