istio/request-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chuck-ui-default
spec:
  hosts:
    - "*"
  gateways:
    - chuck-gateway
  http:
    - match:
      - uri:
          prefix: /
        headers:
          x-debug:
            exact: "true"
      route:
        - destination:
            host: chuck-ui
            subset: v2
            port:
              number: 3000
    - match:
      - uri:
          prefix: /
      route:
        - destination:
            host: chuck-ui
            subset: v1
            port:
              number: 3000
      fault:
        delay:
          fixedDelay: 1s
          percentage:
            value: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chuck-joke-service-default
spec:
  hosts:
    - "chuck-joke-service"
  http:
    - match:
      - uri:
          prefix: /
        headers:
          x-debug:
            exact: "true"
      route:
        - destination:
            host: chuck-joke-service
            subset: v2
            port:
              number: 8080
      fault:
        abort:
          httpStatus: 500
          percentage:
            value: 50
    - match:
      - uri:
          prefix: /
      route:
        - destination:
            host: chuck-joke-service
            subset: v1
            port:
              number: 8080
